--- a/00Doc/RProject.Rmd
+++ b/00Doc/RProject.Rmd
@@ -96,7 +96,9 @@ system("cat ConsumerComplain.ddl", intern = TRUE)
 
 <!-- DON'T CHANGE THIS DIRECTORY, WE DO R ANALYSIS AND DISPLAY OUR PLOTS AND STUFF HERE -->
 ```{r, echo=TRUE}
-source("../03Analysis/Plots.R", echo = TRUE)
+source("../03Analysis/MYPlots.R", echo = TRUE)
+source("../03Analysis/ACPlots.R", echo = TRUE)
+#source("../03Analysis/.R", echo = TRUE)
 ```
 
 
